fix a couple of issues in assay card view: css for card title and row for drag and drop, z-index for draggable row

--- a/BARD/web-app/css/card.css
+++ b/BARD/web-app/css/card.css
@@ -33,10 +33,13 @@ div.cardView table.gridtable td {
     border-color: red;
 }
 
-.drophoverCaption{
+.table caption.drophoverCaption{
     background-color: green;
 }
-div.card div.drophover{
-    border-color: red;
+
+.table drophoverCard {
+	
+	border: 1px solid red;
+    /* border-color: red; */
 }
 
